# CRUD-Controle-de-estoque-de-firma

./: CMakeLists.txt  DIRETRIZES.md  README.md  main.cpp
src/: .gitignore  ApplicationManager.cpp  CMakeLists.txt  main.cpp
src/include/: ApplicationManager.h  Component.h  Database.h  DatabaseAPI.h  Databasenew.h  Ferramenta.h  InterfaceManager.h  Log.h  Mock.h  Peca.h  Repository.h  ShowTravel.h  Showable.h  StageSize.h  StageStructure.h  StringUtils.h  Tamanho.h  Time.h  TimeUtils.h  Tool.h  Travel.h  Utensilio.h  Viagem.h  ViewDelete.h  ViewInsert.h  ViewInterface.h  ViewListAll.h  ViewMenu.h  ViewReport.h  ViewShowTravel.h  ViewUpdate.h
src/utils/: Component.cpp  Database.cpp  DatabaseAPI_test.cpp  Databasenew.cpp  Log.cpp  Mock.cpp  Repository.cpp  StageSize.cpp  StageStructure.cpp  StringUtils.cpp  TimeUtils.cpp  Travel.cpp  maintest.cpp
src/views/: InterfaceManager.cpp  ShowTravel.cpp  ViewDelete.cpp  ViewInsert.cpp  ViewListAll.cpp  ViewMenu.cpp  ViewReport.cpp  ViewShowTravel.cpp  ViewUpdate.cpp
